--- a/CSS/CSS - POSITIONING/css/styles.css
+++ b/CSS/CSS - POSITIONING/css/styles.css
@@ -1,6 +1,7 @@
-/* .body{
-    
-} */
+body{
+    background-color: aqua;
+    margin: 0;
+}
 
 .container{
     background-color: rgb(196, 190, 190);
@@ -16,7 +17,8 @@
     height: 100px;
     width: 100px;
     position: absolute;
-    bottom: 400px;
+    
+
 
 }
 
@@ -25,8 +27,11 @@
     height: 100px;
     width: 100px;
     position: absolute;
+    top: 100px;
     left: 100px;
-    bottom: 400px;
+
+
+
 }
 
 .yellow{
@@ -34,6 +39,7 @@
     height: 100px;
     width: 100px;
     position: absolute;
+    top: 200px;
     left: 200px;
-    bottom: 400px;
+
 }
