--- a/CSS/CSS - POSITIONING/css/styles.css
+++ b/CSS/CSS - POSITIONING/css/styles.css
@@ -5,8 +5,8 @@ body{
 
 .container{
     background-color: rgb(196, 190, 190);
-    height: 400px;
-    width: 400px;
+    height: 300px;
+    width: 300px;
 }
 
 
@@ -38,8 +38,9 @@ body{
     background-color: yellow;
     height: 100px;
     width: 100px;
-    position: absolute;
+    position: fixed;
     top: 200px;
     left: 200px;
+
 
 }
