--- a/CSS/CSS - My Site/css/styles.css
+++ b/CSS/CSS - My Site/css/styles.css
@@ -1,3 +1,42 @@
-.cloud1{
-    position: relative;
+body {
+    margin-top: 100px;
+    text-align: center;
+    font-family: "Merriweather", serif;
+}
+
+a {
+    color: #11999e;
+}
+
+h1 {
+    font-size: 5.625rem;
+    color: #66bfbf;
+    margin: 50px auto 0 auto;
+    font-family: "Sacramento", cursive;
+}
+
+h2 {
+    font-size: 2.5rem;
+    font-weight: normal;
+    color: #66bfbf;
+    font-family: "Montserrat", sans-serif;
+}
+
+h3 {
+    color: #11999e;
+    font-family: "Montserrat", sans-serif;
+}
+
+.pro {
+    text-decoration: underline;
+}
+
+.topcloud {
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}
+
+.bottomcloud {
+    position: absolute;
 }
