--- a/CSS/CSS - My Site/css/styles.css
+++ b/CSS/CSS - My Site/css/styles.css
@@ -1,29 +1,40 @@
 body {
     margin-top: 100px;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     font-family: "Merriweather", serif;
     background-color: #EAF6F6;
 }
 
 .profile-image{
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 a {
-    color: #11999e;
+    color: #11999E;
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    margin: 10px 20px;
+}
+
+a:hover{
+    color: #EAF6F6;
+
 }
 
 P{
     color: #40514E;
+    line-height: 2;
 }
 
 hr{
-    border-color: grey;
-    border-style: none;
-    border-top-style: dotted;
-    border-width: 5px;
-    width: 5%;
-    margin: 100px auto 100px auto;
+  
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
 }
     
 
@@ -46,6 +57,10 @@ h3 {
     font-family: "Montserrat", sans-serif;
 }
 
+.intro{
+    width: 30%;
+    margin: auto;
+}
 .pro {
     text-decoration: underline;
 }
@@ -54,18 +69,19 @@ h3 {
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
-    line-height: 2;
 }
 
 
 .topcloud {
     position: absolute;
-    right: 300px;
-    top: 50px;
+    right: 250px;
+    top: 40px;
 }
 
 .bottomcloud {
     position: absolute;
+    left: 250px;
+    bottom: 300px;
 
 }
 
@@ -88,4 +104,49 @@ h3 {
 
 .bottom-container{
     background-color: #66BFBF;
+    padding: 50px 0 20px;
+}
+
+.end{
+    color: #EAF6F6;
+}
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: "Montserrat", sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+
+
+
+.contact-message{
+    width: 39%;
+    margin: 40px auto 60px;
+}
+
+.copyright{
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
 }
