--- a/Bootstrap/TinDog-Start-master/css/styles.css
+++ b/Bootstrap/TinDog-Start-master/css/styles.css
@@ -1,9 +1,43 @@
+body{
+    font-family: 'Montserrat' ;
+}
+
 #title{
     background-color: #ff4c68;
+    color: #fff;
+}
+
+.container-fluid{
+    padding: 3% 15%;
 }
 
 h1{
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     line-height: 1.5;
+    font-weight: 900;
+}
+
+/* Navigation bar */
+
+.navbar{
+    padding-bottom: 0 0 4.5rem;
+}
+
+.nav-items{
+    padding: 0 18px;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    font-family: 'Montserrat';
+    font-weight:100px ;
+}
+
+
+
+.navbar-brand{
+    font-family: Ubuntu;
+    font-size: 2.5em;
+    font-weight: bold;
 }
