--- a/Bootstrap/TinDog-Start-master/css/styles.css
+++ b/Bootstrap/TinDog-Start-master/css/styles.css
@@ -8,7 +8,7 @@ body{
 }
 
 .container-fluid{
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 
@@ -17,6 +17,13 @@ h1{
     font-size: 3.5rem;
     line-height: 1.5;
     font-weight: 900;
+}
+
+h2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 h3{
@@ -48,6 +55,16 @@ p{
 }
 
 
+/* Title Image */
+
+.image-iphone{
+    width: 20%;
+    transform: rotate(25deg);
+    position: absolute;
+    margin-left: 80px;
+}
+
+
 .navbar-brand{
     font-family: Ubuntu;
     font-size: 2.5em;
@@ -56,6 +73,9 @@ p{
 
 #features{
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
+
 }
 
 .feature-box{
@@ -72,9 +92,70 @@ p{
     color: #ff4c68;
 }
 
-/* Title Image */
 
-.image-iphone{
-    width: 60%;
-    transform: rotate(25deg);
+
+/* testimonials */
+
+#testimonials{
+    text-align: center;
+    background-color: #EF8172;
+    color: #fff;
+
 }
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    padding: 15px;
+}
+
+.carousel-item{
+    padding: 7% 15%;
+}
+
+#press{
+    background-color: #EF8172;
+    text-align: center;
+}
+
+.press-logo{
+    width: 15%x;
+    margin: 20px 20px 150px;
+}
+
+/* Pricing */
+
+#pricing{
+    padding: 100px;
+}
+
+.pricing-column{
+    padding: 3% 2%;
+    text-align: center;
+}
+
+
+
+/* Media Query Breakpoints */
+
+@media (max-width: 995px) {
+
+    #title{
+        text-align: center;
+        margin-right: 30px;
+    }
+
+
+    .image-iphone{
+
+        
+        position: static;
+        transform: rotate(0);   
+        width: 60%;
+        margin: auto;
+    
+
+    }
+    
+}
+
